feat: uploading avatar instead of passing the url
